# Techdocs

./: .gitattributes  .gitignore  AUTHORS  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  temp.py
.devcontainer/: devcontainer.json
.github/workflows/: build_python_package.yml  filesizecheck.yml  githubhfsync.yml
TechdocsAPI/: Dockerfile  README.md  requirements.txt
TechdocsAPI/backend/: __init__.py  router.py
TechdocsAPI/backend/core/: ConfigEnv.py  ExceptionHandlers.py  Exceptions.py
TechdocsAPI/backend/models/: auth.py  generic.py  inference.py
TechdocsAPI/backend/services/auth/: __init__.py  ops.py
TechdocsAPI/backend/services/auth/utils/: auth_funcs.py  functools.py
TechdocsAPI/backend/services/db/utils/: DBQueries.py
TechdocsAPI/backend/templates/: email_verification.html  verification_failure.html  verification_success.html
TechdocsAPI/backend/utils/: DBConnection.py  Gemini_Prompt.txt  __init__.py  prompt.txt  scopes.py
backend/: __init__.py  router.py  vercel.json
backend/core/: ConfigEnv.py  ExceptionHandlers.py
backend/models/: __init__.py
backend/services/auth/: ops.py
backend/services/auth/utils/: JWTBearer.py  auth_funcs.py
backend/services/db/utils/: DBQueries.py
backend/utils/: prompt.txt
frontend/: Login.py  requirements.txt  🏡 Home.py  🏡_Home.py
frontend/.streamlit/: config.toml
frontend/components/: __init__.py  authors.py  login.py  logo.py  logout.py  user_greetings.py
frontend/content/: installation.md  working.md
frontend/layouts/: mainlayout.py  st_page_layouts.json
frontend/pages/: 2_📝_Instructions.py  3_💻_Demo.py  3_📝_Instructions.py  Code.py  Usage.py
scripts/: test.py
techdocs/: README.md  cli.py  execute.py  ops.py  pyproject.toml  setup.cfg  setup.py
techdocs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
techdocs/techdocs/: __init__.py  cli.py  dtypes.py  ops.py
techdocs/techdocs/utils/: LoggingManager.py  functools.py  parse.py
techdocs/utils/: functools.py  parse.py  subcommand_signatures.json
testing/: DBQueries.py  test.py
testing/pack/: DBQueries.py  functools.py
