[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
    "tqdm >= 4.66.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "techdocs"
version = "0.2.0"
description = "Code documentation generation CLI App"
readme = "README.md"
requires-python = ">=3.10"
authors = [
            {"name" = "test", "email" = "alfatrion123@gmail.com"},
]
dependencies = [
    "requests",
]
scripts = {techdocs = "techdocs.cli:main"}


[tool.setuptools]
packages = ["techdocs", "techdocs.utils"]

[tool.setuptools.package-data]
"*" = ["*.json"]